[package]
name = "katwalk"
version = "0.0.9"
authors = ["Kris Kwiatkowski <contact@amongbytes.com>"]
edition = "2018"
description = "Utility to iterate over NIST KAT vectors. It allows to bind an action for each test vector supplied by calling code. Hence, making it possible to run KAT testing. This is work in prograess version!!!"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
